issuer/main_issuers/example_ingress_tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-production-tls"

spec:
  tls:
  - hosts:
    - superdentist.io
    secretName: quickstart-example-tls-prod
  rules:
  - host: superdentist.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kuard
          servicePort: 80
